# coding-companion

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json
res/: role_message.md
src/: bot.rs  commands.rs  config.rs  handler.rs  lib.rs  main.rs  reaction.rs  thread_channel.rs  util.rs
