[package]
name = "coding-companion"
authors = ["0xJoeMama"]
version = "1.0.0"
edition = "2021"
license = "GPL3"
rust-version = "1.62"
description = "The Discord bot used to manage the 'Coding Factory' discord community server."
keywords = ["discord", "bot", "serenity", "manage", "utility", "server"]
readme = "README.md"

[dependencies]
serenity = "*" # Discord wrapper
dotenv = "*" # .env file parser
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]} # async runtime
serde = "*" # serialization/deserialization library
serde_json = "*" # JSON integration for serde
