[package]
name = "coding-companion"
authors = ["0xJoeMama <0xjoemama@gmail.com>"]
version = "1.0.0"
edition = "2021"
license = "GPL3"
rust-version = "1.62"
description = "The Discord bot used to manage the 'Coding Factory' discord community server."
keywords = ["discord", "bot", "serenity", "manage", "utility", "server"]
readme = "README.md"


[dependencies]
dotenv = "*" # .env file parser
tokio = { version = "1.0", features = [
  "macros",
  "rt-multi-thread",
] } # async runtime
serde = "*" # serialization/deserialization library
serde_json = "*" # JSON integration for serde
regex = "*" # regular expression support
lazy_static = "*"

[dependencies.serenity] # Discord API wrapper
version = "*"
default-features = false
features = [
  "builder",
  "cache",
  "client",
  "gateway",
  "model",
  "http",
  "utils",
  "rustls_backend",
]

[dev-dependencies]
